--- a/src/views/refundForm.ejs
+++ b/src/views/refundForm.ejs
@@ -209,6 +209,20 @@
                                             </select>
                                         </div>
                                     </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número Póliza</label>
+                                        <div class="col-sm-9">
+                                            <select class="form-control" name="numero_poliza" onmousedown="if(this.options.length>2)this.size=2" onchange="this.size=0" onblur="this.size=0">
+                                                <option value="">Seleccione</option>
+                                                <% policies.forEach((policy) => { %>
+                                                    <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
+                                                <% }); %>
+                                                <% collectives.forEach((collective) => { %>
+                                                    <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
+                                                <% }); %>
+                                            </select>
+                                        </div>
+                                    </div>
                                     <div class="form-group" id="searchinput" style="display:none">
                                         <div class="hr-line-dashed"></div>
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Monto Pagado</label>
