Arreglado los modulos de distribucion, fraccionamiento, correo, recibo y renovaciones

--- a/src/views/renewalConsultation.ejs
+++ b/src/views/renewalConsultation.ejs
@@ -156,7 +156,7 @@
                                 <th>Fecha desde</th>
                                 <th>Fecha hasta</th>
                                 <th>Moneda</th>
-                                <th>Prima</th>
+                                <th>Prima Neta</th>
                                 <th>Estatus</th>
                                 <th>Tipo Póliza</th>
                                 <th>Aseguradora</th>
@@ -176,7 +176,7 @@
                                 <th>Fecha desde</th>
                                 <th>Fecha hasta</th>
                                 <th>Moneda</th>
-                                <th>Prima</th>
+                                <th>Prima Neta</th>
                                 <th>Estatus</th>
                                 <th>Tipo Póliza</th>
                                 <th>Aseguradora</th>
@@ -270,7 +270,7 @@
                     {"data": "fecha_desde_poliza"},
                     {"data": "fecha_hasta_poliza"},
                     {"data": "tipo_moneda_poliza"},
-                    {"data": "prima_anual_poliza"},
+                    {"data": "prima_neta_poliza"},
                     {"data": "estatus_poliza"},
                     {"data": "tipo_poliza"},
                     {"data": "nombre_aseguradora"},
