--- a/src/views/subdivisions.ejs
+++ b/src/views/subdivisions.ejs
@@ -11,7 +11,7 @@
                 <a>Recibo</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Recibos</strong>
+                <strong>Editar Recibos</strong>
             </li>
         </ol>
     </div>
@@ -27,19 +27,19 @@
                     <div class="table-responsive">
                         <table 
                             class="table table-striped table-bordered table-hover"
-                            id="tablaRecibos" 
+                            id="tablaFraccionamientos" 
                         >
                         <thead>
                         <tr>
-                            <th>Número Póliza</th>
-                            <th>Cédula/Rif Tomador</th>
-                            <th>Nombre/Razón Tomador</th>
-                            <th>Cédula/Rif Asegurado</th>
-                            <th>Nombre/Razón Asegurado</th>
                             <th>Número Recibo</th>
                             <th>Tipo Recibo</th>
                             <th>Fecha Desde</th>
                             <th>Fecha Hasta</th>
+                            <th>Métedo Pago</th>
+                            <th>Prima Neta</th>
+                            <th>IGTF</th>
+                            <th>Prima Total</th>
+                            <th>Comisión</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -49,15 +49,15 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>Número Póliza</th>
-                            <th>Cédula/Rif Tomador</th>
-                            <th>Nombre/Razón Tomador</th>
-                            <th>Cédula/Rif Asegurado</th>
-                            <th>Nombre/Razón Asegurado</th>
                             <th>Número Recibo</th>
                             <th>Tipo Recibo</th>
                             <th>Fecha Desde</th>
                             <th>Fecha Hasta</th>
+                            <th>Métedo Pago</th>
+                            <th>Prima Neta</th>
+                            <th>IGTF</th>
+                            <th>Prima Total</th>
+                            <th>Comisión</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -127,28 +127,28 @@
 <!-- Page-Level Scripts -->
 <script>
 var lista = <%- JSON.stringify(data) %>;
-var tablaRecibo = null;
+var tablaFraccionamiento = null;
 $(document).ready(function(){
-    tablaRecibo = $('#tablaRecibos').DataTable({
+    tablaFraccionamiento = $('#tablaFraccionamientos').DataTable({
         pageLength: 25,
         responsive: true,
         dom: '<"html5buttons"B>lTfgitp',
         processing: true,
         serverSide: false,
         columns: [
-            {"data": "numero_poliza"},
-            {"data": "cedula_rif_tomador"},
-            {"data": "nombre_completo_razon_social_tomador"},
-            {"data": "cedula_rif_asegurado"},
-            {"data": "nombre_completo_razon_social_asegurado"},
-            {"data": "numero_recibo"},
-            {"data": "tipo_recibo"},
-            {"data": "fecha_desde_recibo"},
-            {"data": "fecha_hasta_recibo"},
+            {"data": "numero_fraccionamiento"},
+            {"data": "tipo_fraccionamiento"},
+            {"data": "fecha_desde_fraccionamiento"},
+            {"data": "fecha_hasta_fraccionamiento"},
+            {"data": "metodo_pago_fraccionamiento"},
+            {"data": "prima_neta_fraccionamiento"},
+            {"data": "igtf_fraccionamiento"},
+            {"data": "prima_total_fraccionamiento"},
+            {"data": "monto_comision_fraccionamiento"},
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/subdivisions/${row.id_recibo}">
+                        return `<form class="form-inline" method="get" action="/sistema/division/${row.id_fraccionamiento}">
                                     <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
                                 </form>`;
                 }
@@ -156,7 +156,7 @@ $(document).ready(function(){
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="post" action="/sistema/remove-receipt/${row.id_recibo}">
+                        return `<form class="form-inline" method="post" action="/sistema/remove-division/${row.id_fraccionamiento}">
                                     <div class="row">
                                         <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
                                             <button 
@@ -169,8 +169,8 @@ $(document).ready(function(){
                                         </div> 
                                         <div class="col-sm-6 col-lg-12">
                                             <textarea 
-                                                name="obser_deshabilitar_recibo"
-                                                id="obser_deshabilitar_recibo" 
+                                                name="obser_deshabilitar_fraccionamiento"
+                                                id="obser_deshabilitar_fraccionamiento" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
@@ -214,10 +214,15 @@ $(document).ready(function(){
                 "next": "Siguiente",
                 "previous": "Anterior"
             }
+        },
+        "fnRowCallback": function(nRow, data, iDisplayIndex, iDisplayIndexFull) {
+            if (data.recibo_distribuicion_fraccionamiento === 0) {
+                $('td', nRow).css('color', 'Red');
+            }
         }
     });
-    tablaRecibo.rows.add(lista);
-    tablaRecibo.draw();
+    tablaFraccionamiento.rows.add(lista);
+    tablaFraccionamiento.draw();
 });
 </script>
 
