--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -146,15 +146,34 @@
                     <li>
                         <a href="#"><i class="fa fa-clipboard"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="/sistema/premiums-collected">Primas Cobradas</a></li>
-                            <li><a href="/sistema/commissions-collected">Comisiones Cobradas</a></li>
-                            <li><a href="/sistema/policy-claims">Siniestralidad Póliza</a></li>
-                            <li><a href="/sistema/global-loss-ratio">Siniestralidad Global</a></li>
-                            <li><a href="/sistema/pending-payments">Pagos Pendientes</a></li>
-                            <li><a href="/sistema/accident-rate">Siniestralidad</a></li>
-                            <li><a href="/sistema/premiums-collected-date">Primas Cobradas Fecha</a></li>
-                            <li><a href="/sistema/portfolio-composition">Composición de Cartera</a></li>
-                            <li><a href="/sistema/persistence">Persistencia</a></li>
+                            <li>
+                                <a href="#">Primas<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/premiums-collected">Primas Cobradas</a></li>
+                                    <li><a href="/sistema/premiums-pending">Primas Pendientes</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Comisiones<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/commission-transits">Comisiones en Transito</a></li>
+                                    <li><a href="/sistema/commission-distribution">Comisiones por Distribución</a></li>
+                                    <li><a href="/sistema/commission-paid">Comisiones Pagadas</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Siniestralidad<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/accident-rate">Consulta de Siniestralidad</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Composición Cartera<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/portfolio-composition">Composición de Cartera</a></li>
+                                    <li><a href="/sistema/persistence">Persistencia</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li>
