--- a/src/views/accidentRate.ejs
+++ b/src/views/accidentRate.ejs
@@ -11,7 +11,7 @@
                 <a>Reportes</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Siniestralidad</strong>
+                <strong>Siniestralidad</strong>
             </li>
         </ol>
     </div>
@@ -19,60 +19,140 @@
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
-            <div class="ibox ">
+            <div class="ibox">
                 <div class="ibox-title">
-                    <h5>Siniestralidad</h5>
+                    <h5>Consulta de Siniestralidad Póliza</h5>
                 </div>
                 <div class="ibox-content">
                     <form method="POST" action="/sistema/accident-rate">
                         <div class="row">
                             <div class="col-lg-6">
-                                <div class="form-group">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Desde Inicio Póliza</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="date"
-                                                name="fecha_inicio"
-                                                id="fecha_inicio"
-                                                class="form-control"
-                                                required
-                                            >
+                                <div class="ibox">
+                                    <div class="form-control">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Desde</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="date"
+                                                    name="fecha_desde"
+                                                    id="fecha_desde"
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Hasta</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="date"
+                                                    name="fecha_hasta"
+                                                    id="fecha_hasta"
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Aseguradora</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="nombre_aseguradora">
+                                                    <option value="">Seleccione</option>
+                                                    <% insurers.forEach((insurer) => { %>
+                                                        <option value="<%= insurer.nombre_aseguradora %>"><%= insurer.nombre_aseguradora %></option>
+                                                    <% }); %>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Póliza</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="numero_poliza" onmousedown="if(this.options.length>2)this.size=2" onchange="this.size=0" onblur="this.size=0">
+                                                    <option value="">Seleccione</option>
+                                                    <% policies.forEach((policy) => { %>
+                                                        <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
+                                                    <% }); %>
+                                                    <% collectives.forEach((collective) => { %>
+                                                        <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
+                                                    <% }); %>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="form-group">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Hasta Inicio Póliza</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="date"
-                                                name="fecha_final"
-                                                id="fecha_final"
-                                                class="form-control"
-                                                required
-                                            >
+                                <div class="ibox">
+                                    <div class="form-control">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="ramo_poliza">
+                                                    <option value="">Seleccione</option>
+                                                    <option value="SALUD INDIVIDUAL">SALUD INDIVIDUAL</option>
+                                                    <option value="AUTOMÓVIL INDIVIDUAL">AUTOMÓVIL INDIVIDUAL</option>
+                                                    <option value="PATRIMONIAL INDIVIDUAL">PATRIMONIAL INDIVIDUAL</option>
+                                                    <option value="FIANZA INDIVIDUAL">FIANZA INDIVIDUAL</option>
+                                                    <option value="OTROS RAMOS INDIVIDUAL">OTROS RAMOS INDIVIDUAL</option>
+                                                    <option value="FUNERARIO INDIVIDUAL">FUNERARIO INDIVIDUAL</option>
+                                                    <option value="VIDA INDIVIDUAL">VIDA INDIVIDUAL</option>
+                                                    <option value="AP INDIVIDUAL">AP INDIVIDUAL</option>
+                                                    <option value="VIAJE INDIVIDUAL">VIAJE INDIVIDUAL</option>
+                                                    <option value="SALUD COLECTIVO">SALUD COLECTIVO</option>
+                                                    <option value="AUTOMÓVIL COLECTIVO">AUTOMÓVIL COLECTIVO</option>
+                                                    <option value="RIESGOS DIVERSOS COLECTIVO">RIESGOS DIVERSOS COLECTIVO</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Agente Propio</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="nombre_agente_propio">
+                                                    <option value="">Seleccione</option>
+                                                    <% ownAgents.forEach((ownAgent) => { %>
+                                                        <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
+                                                    <% }); %>
+                                                    <option value="ATINA">ATINA</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cliente</label>
+                                            <div class="col-sm-9 field">
+                                                <div class="numeral-selector selector">
+                                                    <div class="select-box-wrapper">
+                                                        <select name="tipo_id_rif_asegurado" id="select_box">
+                                                            <option value="V">V</option>
+                                                            <option value="E">E</option>
+                                                            <option value="J">J</option>
+                                                            <option value="G">G</option>
+                                                            <option value="I">I</option>
+                                                            <option value="F">F</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <input 
+                                                    type="text"
+                                                    name="id_rif_asegurado"
+                                                    id="id_rif_asegurado"
+                                                    placeholder="Cliente Cédula/Rif" 
+                                                    class="form-control input-numeral"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="tipo_siniestro">
+                                                    <option value="">Seleccione</option>
+                                                    <option value="REEMBOLSO">REEMBOLSO</option>
+                                                    <option value="CARTA AVAL">CARTA AVAL</option>
+                                                    <option value="EMERGENCIA">EMERGENCIA</option>
+                                                    <option value="AMP">AMP</option>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <div class="form-group row"><label class="col-form-label col-sm-1half">Tipo de Moneda</label>
-                                        <div class="col-sm-10half">
-                                            <select class="form-control" name="tipo_moneda" id="tipo_moneda" required>
-                                                <option value="">Seleccione *</option>
-                                                <option value="BOLÍVAR">BOLÍVAR</option>
-                                                <option value="DÓLAR">DÓLAR</option>
-                                                <option value="EUROS">EUROS</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="hr-line-dashed"></div>
                         <div class="form-group row">
                             <div class="col-sm-12 col-sm-offset-2">
                                 <div class="card-body d-flex">
@@ -85,12 +165,21 @@
                         <div class="table-responsive">
                             <table 
                                 class="table table-striped table-bordered table-hover"
-                                id="tablaSiniestralidades" 
+                                id="tablaSiniestros"
                             >
                             <thead>
                             <tr>
-                                <th>Tipo Póliza</th>
-                                <th>Prima Devengada</th>
+                                <th>Aseguradora</th>
+                                <th>N° Póliza</th>
+                                <th>N° Siniestro</th>
+                                <th>CI Tomador</th>
+                                <th>Tomador</th>
+                                <th>CI Beneficiario</th>
+                                <th>Beneficiario</th>
+                                <th>Patología</th>
+                                <th>Tipo de Siniestro</th>
+                                <th>Monto</th>
+                                <th>Estatus</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -98,8 +187,17 @@
                             </tbody>
                             <tfoot>
                             <tr>
-                                <th>Tipo Póliza</th>
-                                <th>Prima Devengada</th>
+                                <th>Aseguradora</th>
+                                <th>N° Póliza</th>
+                                <th>N° Siniestro</th>
+                                <th>CI Tomador</th>
+                                <th>Tomador</th>
+                                <th>CI Beneficiario</th>
+                                <th>Beneficiario</th>
+                                <th>Patología</th>
+                                <th>Tipo de Siniestro</th>
+                                <th>Monto</th>
+                                <th>Estatus</th>
                             </tr>
                             </tfoot>
                             </table>
@@ -108,7 +206,7 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 </div>
 </br>
 </br>
@@ -165,7 +263,10 @@
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<script src="/js/cleave-js/cleave.min.js"></script>
+
 <!-- Page-Level Scripts -->
+
 <% if (typeof(data) !== 'undefined') { %>
     <script>
         function toDataURL(src, callback){
@@ -186,19 +287,30 @@
             localStorage.setItem("formDataImageAtina", dataURL) 
         });
     </script>
+    
     <script>
         var lista = <%- JSON.stringify(data) %>;
-        var tablaSiniestralidad = null;
+        var tablaSiniestro = null;
         $(document).ready(function(){
-            tablaSiniestralidad = $('#tablaSiniestralidades').DataTable({
+            tablaSiniestro = $('#tablaSiniestros').DataTable({
                 pageLength: 25,
                 responsive: true,
                 dom: '<"html5buttons"B>lTfgitp',
                 processing: true,
                 serverSide: false,
+                order: [[0, 'desc']],
                 columns: [
-                    {"data": "tipo_poliza"},
-                    {"data": "prima_devengada"}
+                    {"data": "nombre_aseguradora"},
+                    {"data": "numero_poliza"},
+                    {"data": "numero_siniestro"},
+                    {"data": "ci_tomador_poliza"},
+                    {"data": "nombre_tomador_poliza"},
+                    {"data": "cedula_beneficiario"},
+                    {"data": "nombre_completo_beneficiario"},
+                    {"data": "patologia_siniestro"},
+                    {"data": "tipo_siniestro"},
+                    {"data": "monto_siniestro"},
+                    {"data": "estatus_siniestro"},
                 ],
                 buttons: [
                     {extend: 'excel', title: 'Siniestralidad'},
@@ -249,11 +361,49 @@
                     }
                 }
             });
-            tablaSiniestralidad.rows.add(lista);
-            tablaSiniestralidad.draw();
+            tablaSiniestro.rows.add(lista);
+            tablaSiniestro.draw();
         });
     </script>
 <% } %>
+
+<script>
+    if (($('#select_box').val() === 'V') || ($('#select_box').val() === 'E')) {
+        var cleaveNumeral = new Cleave('.input-numeral', {
+            numeral: true,
+            numeralDecimalMark: ',',
+            delimiter: '.',
+            stripLeadingZeroes: false
+        });
+    } else {
+        var cleaveNumeral = new Cleave('.input-numeral', {
+            numeral: true,
+            numeralDecimalMark: '!',
+            delimiter: '',
+            stripLeadingZeroes: false
+        });
+    }
+
+    $('#select_box').change(function(){
+        if ((this.value === 'V') || (this.value === 'E')) {
+            var cleaveNumeral = new Cleave('.input-numeral', {
+                numeral: true,
+                numeralDecimalMark: ',',
+                delimiter: '.',
+                stripLeadingZeroes: false
+            });
+            cleaveNumeral.setRawValue('');
+        } else {
+            var cleaveNumeral = new Cleave('.input-numeral', {
+                numeral: true,
+                numeralDecimalMark: '!',
+                delimiter: '',
+                stripLeadingZeroes: false,
+            });
+            cleaveNumeral.setRawValue('');
+        }
+    });
+</script>
 
 </body>
 
