--- a/src/views/commissionPaid.ejs
+++ b/src/views/commissionPaid.ejs
@@ -2,16 +2,16 @@
 <%- include('layouts/header') %>
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Renovaciones</h2>
+        <h2>Reportes</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="/sistema">Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a>Renovaciones</a>
+                <a>Reportes</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de renovaciones</strong>
+                <strong>Comisiones</strong>
             </li>
         </ol>
     </div>
@@ -21,23 +21,32 @@
         <div class="col-lg-12">
             <div class="ibox">
                 <div class="ibox-title">
-                    <h5>Renovaciones</h5>
+                    <h5>Consulta de Comisiones Pagadas</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="POST" action="/sistema/consult-renewal">
+                    <form method="POST" action="/sistema/commission-paid">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="ibox">
                                     <div class="form-control">
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Póliza No.</label>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Desde</label>
                                             <div class="col-sm-9">
                                                 <input 
-                                                    type="text"
-                                                    name="numero_poliza"
-                                                    id="numero_poliza"
-                                                    placeholder="Número de Póliza" 
+                                                    type="date"
+                                                    name="fecha_desde"
+                                                    id="fecha_desde"
                                                     class="form-control"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Hasta</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="date"
+                                                    name="fecha_hasta"
+                                                    id="fecha_hasta"
+                                                    class="form-control"
                                                 >
                                             </div>
                                         </div>
@@ -52,49 +61,45 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="hr-line-dashed"></div>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
-                                            <div class="col-sm-9">
-                                                <select class="form-control" name="ramo_poliza">
-                                                    <option value="">Seleccione</option>
-                                                    <option value="SALUD">SALUD</option>
-                                                    <option value="FIANZA">FIANZA</option>
-                                                    <option value="AUTOMÓVIL">AUTOMÓVIL</option>
-                                                    <option value="PATRIMONIAL">PATRIMONIAL</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="hr-line-dashed"></div>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha</label>
-                                            <div class="col-sm-9">
-                                                <input 
-                                                    type="date"
-                                                    name="fecha_poliza"
-                                                    id="fecha_poliza"
-                                                    class="form-control"
-                                                >
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="ibox">
                                     <div class="form-control">
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Nombre del Cliente</label>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
                                             <div class="col-sm-9">
-                                                <input 
-                                                    type="text"
-                                                    name="nombre_asegurado"
-                                                    id="nombre_asegurado" 
-                                                    placeholder="Nombre del Cliente" 
-                                                    class="form-control"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                                                >
+                                                <select class="form-control" name="ramo_poliza">
+                                                    <option value="">Seleccione</option>
+                                                    <option value="SALUD INDIVIDUAL">SALUD INDIVIDUAL</option>
+                                                    <option value="AUTOMÓVIL INDIVIDUAL">AUTOMÓVIL INDIVIDUAL</option>
+                                                    <option value="PATRIMONIAL INDIVIDUAL">PATRIMONIAL INDIVIDUAL</option>
+                                                    <option value="FIANZA INDIVIDUAL">FIANZA INDIVIDUAL</option>
+                                                    <option value="OTROS RAMOS INDIVIDUAL">OTROS RAMOS INDIVIDUAL</option>
+                                                    <option value="FUNERARIO INDIVIDUAL">FUNERARIO INDIVIDUAL</option>
+                                                    <option value="VIDA INDIVIDUAL">VIDA INDIVIDUAL</option>
+                                                    <option value="AP INDIVIDUAL">AP INDIVIDUAL</option>
+                                                    <option value="VIAJE INDIVIDUAL">VIAJE INDIVIDUAL</option>
+                                                    <option value="SALUD COLECTIVO">SALUD COLECTIVO</option>
+                                                    <option value="AUTOMÓVIL COLECTIVO">AUTOMÓVIL COLECTIVO</option>
+                                                    <option value="RIESGOS DIVERSOS COLECTIVO">RIESGOS DIVERSOS COLECTIVO</option>
+                                                </select>
                                             </div>
                                         </div>
                                         <div class="hr-line-dashed"></div>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Agente Propio</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="nombre_agente_propio">
+                                                    <option value="">Seleccione</option>
+                                                    <% ownAgents.forEach((ownAgent) => { %>
+                                                        <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
+                                                    <% }); %>
+                                                    <option value="ATINA">ATINA</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cliente</label>
                                             <div class="col-sm-9 field">
                                                 <div class="numeral-selector selector">
                                                     <div class="select-box-wrapper">
@@ -112,20 +117,9 @@
                                                     type="text"
                                                     name="id_rif_asegurado"
                                                     id="id_rif_asegurado"
-                                                    onkeyup="pasarNombreAsegurado();"
-                                                    placeholder="Cédula/Rif" 
+                                                    placeholder="Cliente Cédula/Rif" 
                                                     class="form-control input-numeral"
                                                 >
-                                            </div>
-                                        </div>
-                                        <div class="hr-line-dashed"></div>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo de Suscripción</label>
-                                            <div class="col-sm-9">
-                                                <select class="form-control" name="tipo_poliza">
-                                                    <option value="">Seleccione</option>
-                                                    <option value="INDIVIDUAL">INDIVIDUAL</option>
-                                                    <option value="COLECTIVO">COLECTIVO</option>
-                                                </select>
                                             </div>
                                         </div>
                                     </div>
@@ -145,23 +139,18 @@
                         <div class="table-responsive">
                             <table 
                                 class="table table-striped table-bordered table-hover"
-                                id="tablaRenovaciones" 
+                                id="tablaComisionesPagadas"
                             >
                             <thead>
                             <tr>
-                                <th>Número Póliza</th>
-                                <th>Tomador</th>
-                                <th>Ramo</th>
-                                <th>Fecha desde</th>
-                                <th>Fecha hasta</th>
-                                <th>Moneda</th>
-                                <th>Prima Neta</th>
-                                <th>Estatus</th>
-                                <th>Tipo Póliza</th>
+                                <th>Agente Propio</th>
+                                <th>N° Póliza</th>
                                 <th>Aseguradora</th>
-                                <th>Nombre/Razón</th>
-                                <th>Tipo Cédula/Rif</th>
-                                <th>Cédula/Rif</th>
+                                <th>Ramo</th>
+                                <th>Tomador</th>
+                                <th>Asegurado</th>
+                                <th>Prima Neta</th>
+                                <th>Comisión</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -169,19 +158,14 @@
                             </tbody>
                             <tfoot>
                             <tr>
-                                <th>Número Póliza</th>
-                                <th>Tomador</th>
-                                <th>Ramo</th>
-                                <th>Fecha desde</th>
-                                <th>Fecha hasta</th>
-                                <th>Moneda</th>
-                                <th>Prima Neta</th>
-                                <th>Estatus</th>
-                                <th>Tipo Póliza</th>
+                                <th>Agente Propio</th>
+                                <th>N° Póliza</th>
                                 <th>Aseguradora</th>
-                                <th>Nombre/Razón</th>
-                                <th>Tipo Cédula/Rif</th>
-                                <th>Cédula/Rif</th>
+                                <th>Ramo</th>
+                                <th>Tomador</th>
+                                <th>Asegurado</th>
+                                <th>Prima Neta</th>
+                                <th>Comisión</th>
                             </tr>
                             </tfoot>
                             </table>
@@ -253,31 +237,61 @@
 
 <% if (typeof(data) !== 'undefined') { %>
     <script>
+        function toDataURL(src, callback){
+            var image = new Image();
+            image.crossOrigin = 'Anonymous';
+            image.onload = function(){
+                var canvas = document.createElement('canvas');
+                var context = canvas.getContext('2d');
+                canvas.height = this.naturalHeight;
+                canvas.width = this.naturalWidth;
+                context.drawImage(this, 0, 0);
+                var dataURL = canvas.toDataURL('image/png');
+                callback(dataURL);
+            };
+            image.src = src;
+        }   
+        toDataURL('/img/LOGOTIPO_VPRINCIPAL_ATINA.png', function(dataURL){
+            localStorage.setItem("formDataImageAtina", dataURL) 
+        });
+    </script>
+    
+    <script>
         var lista = <%- JSON.stringify(data) %>;
-        var tablaRenovacion = null;
+        var tablaComisionPagada = null;
         $(document).ready(function(){
-            tablaRenovacion = $('#tablaRenovaciones').DataTable({
+            tablaComisionPagada = $('#tablaComisionesPagadas').DataTable({
                 pageLength: 25,
                 responsive: true,
                 dom: '<"html5buttons"B>lTfgitp',
                 processing: true,
                 serverSide: false,
+                order: [[0, 'desc']],
                 columns: [
+                    {"data": "nombre_agente_propio"},
                     {"data": "numero_poliza"},
-                    {"data": "nombre_tomador_poliza"},
-                    {"data": "tipo_individual_poliza"},
-                    {"data": "fecha_desde_poliza"},
-                    {"data": "fecha_hasta_poliza"},
-                    {"data": "tipo_moneda_poliza"},
-                    {"data": "prima_neta_poliza"},
-                    {"data": "estatus_poliza"},
-                    {"data": "tipo_poliza"},
                     {"data": "nombre_aseguradora"},
+                    {"data": "tipo_individual_poliza"},
+                    {"data": "nombre_tomador_poliza"},
                     {"data": "nombre_completo_razon_social_asegurado"},
-                    {"data": "tipo_cedula_rif_asegurado"},
-                    {"data": "cedula_rif_asegurado"},
+                    {"data": "prima_neta"},
+                    {"data": "monto_comision"},
                 ],
                 buttons: [
+                    {extend: 'excel', title: 'Comisiones Pagadas'},
+                    {
+                        extend: 'pdfHtml5',
+                        title: 'Comisiones Pagadas',
+                        customize: function ( doc ) {
+                            doc.content.splice( 1, 0, {
+                                margin: [ 0, 0, 0, 12 ],
+                                alignment: 'left',
+                                image: localStorage.formDataImageAtina,
+                                width: 80,
+                                height: 30
+                            } );
+                        }
+                    },
                     {
                         extend: 'print',
                         customize: function (win){
@@ -312,8 +326,8 @@
                     }
                 }
             });
-            tablaRenovacion.rows.add(lista);
-            tablaRenovacion.draw();
+            tablaComisionPagada.rows.add(lista);
+            tablaComisionPagada.draw();
         });
     </script>
 <% } %>
