--- a/src/views/premiumsCollected.ejs
+++ b/src/views/premiumsCollected.ejs
@@ -11,7 +11,7 @@
                 <a>Reportes</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Primas Cobradas</strong>
+                <strong>Primas</strong>
             </li>
         </ol>
     </div>
@@ -19,41 +19,156 @@
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
-            <div class="ibox ">
+            <div class="ibox">
                 <div class="ibox-title">
-                    <h5>Primas Cobradas</h5>
+                    <h5>Consulta de Primas Cobradas</h5>
                 </div>
                 <div class="ibox-content">
-                    <div class="table-responsive">
-                        <table 
-                            class="table table-striped table-bordered table-hover"
-                            id="tablaPrimasCobradas" 
-                        >
-                        <thead>
-                        <tr>
-                            <th>Agente Propio</th>
-                            <th>Tipo Ramo</th>
-                            <th>Aseguradora</th>
-                            <th>Fecha Desde</th>
-                            <th>Fecha Hasta</th>
-                            <th>Prima</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                            
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                            <th>Agente Propio</th>
-                            <th>Tipo Ramo</th>
-                            <th>Aseguradora</th>
-                            <th>Fecha Desde</th>
-                            <th>Fecha Hasta</th>
-                            <th>Prima</th>
-                        </tr>
-                        </tfoot>
-                        </table>
-                    </div>
+                    <form method="POST" action="/sistema/premiums-collected">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="ibox">
+                                    <div class="form-control">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Desde</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="date"
+                                                    name="fecha_desde"
+                                                    id="fecha_desde"
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Hasta</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="date"
+                                                    name="fecha_hasta"
+                                                    id="fecha_hasta"
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Aseguradora</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="nombre_aseguradora">
+                                                    <option value="">Seleccione</option>
+                                                    <% insurers.forEach((insurer) => { %>
+                                                        <option value="<%= insurer.nombre_aseguradora %>"><%= insurer.nombre_aseguradora %></option>
+                                                    <% }); %>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="ibox">
+                                    <div class="form-control">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="ramo_poliza">
+                                                    <option value="">Seleccione</option>
+                                                    <option value="SALUD INDIVIDUAL">SALUD INDIVIDUAL</option>
+                                                    <option value="AUTOMÓVIL INDIVIDUAL">AUTOMÓVIL INDIVIDUAL</option>
+                                                    <option value="PATRIMONIAL INDIVIDUAL">PATRIMONIAL INDIVIDUAL</option>
+                                                    <option value="FIANZA INDIVIDUAL">FIANZA INDIVIDUAL</option>
+                                                    <option value="OTROS RAMOS INDIVIDUAL">OTROS RAMOS INDIVIDUAL</option>
+                                                    <option value="FUNERARIO INDIVIDUAL">FUNERARIO INDIVIDUAL</option>
+                                                    <option value="VIDA INDIVIDUAL">VIDA INDIVIDUAL</option>
+                                                    <option value="AP INDIVIDUAL">AP INDIVIDUAL</option>
+                                                    <option value="VIAJE INDIVIDUAL">VIAJE INDIVIDUAL</option>
+                                                    <option value="SALUD COLECTIVO">SALUD COLECTIVO</option>
+                                                    <option value="AUTOMÓVIL COLECTIVO">AUTOMÓVIL COLECTIVO</option>
+                                                    <option value="RIESGOS DIVERSOS COLECTIVO">RIESGOS DIVERSOS COLECTIVO</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Agente Propio</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="nombre_agente_propio">
+                                                    <option value="">Seleccione</option>
+                                                    <% ownAgents.forEach((ownAgent) => { %>
+                                                        <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
+                                                    <% }); %>
+                                                    <option value="ATINA">ATINA</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cliente</label>
+                                            <div class="col-sm-9 field">
+                                                <div class="numeral-selector selector">
+                                                    <div class="select-box-wrapper">
+                                                        <select name="tipo_id_rif_asegurado" id="select_box">
+                                                            <option value="V">V</option>
+                                                            <option value="E">E</option>
+                                                            <option value="J">J</option>
+                                                            <option value="G">G</option>
+                                                            <option value="I">I</option>
+                                                            <option value="F">F</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <input 
+                                                    type="text"
+                                                    name="id_rif_asegurado"
+                                                    id="id_rif_asegurado"
+                                                    placeholder="Cliente Cédula/Rif" 
+                                                    class="form-control input-numeral"
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group row">
+                            <div class="col-sm-12 col-sm-offset-2">
+                                <div class="card-body d-flex">
+                                    <button class="btn btn-primary btn-sm ml-auto" type="submit">Consultar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <% if (typeof(data) !== 'undefined') { %>
+                        <div class="table-responsive">
+                            <table 
+                                class="table table-striped table-bordered table-hover"
+                                id="tablaPrimasCobradas" 
+                            >
+                            <thead>
+                            <tr>
+                                <th>Agente Propio</th>
+                                <th>N° Póliza</th>
+                                <th>Aseguradora</th>
+                                <th>Ramo</th>
+                                <th>Tomador</th>
+                                <th>Asegurado</th>
+                                <th>Prima Neta</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                                
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                                <th>Agente Propio</th>
+                                <th>N° Póliza</th>
+                                <th>Aseguradora</th>
+                                <th>Ramo</th>
+                                <th>Tomador</th>
+                                <th>Asegurado</th>
+                                <th>Prima Neta</th>
+                            </tr>
+                            </tfoot>
+                            </table>
+                        </div>
+                    <% } %>
                 </div>
             </div>
         </div>
@@ -114,63 +229,142 @@
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<!-- Page-Level Scripts -->
-<script>
-var lista = <%- JSON.stringify(data) %>;
-var tablaPrimaCobrada = null;
-$(document).ready(function(){
-    tablaPrimaCobrada = $('#tablaPrimasCobradas').DataTable({
-        pageLength: 25,
-        responsive: true,
-        dom: '<"html5buttons"B>lTfgitp',
-        processing: true,
-        serverSide: false,
-        columns: [
-            {"data": "ownAgent"},
-            {"data": "bouquetType"},
-            {"data": "insurer"},
-            {"data": "dateFrom"},
-            {"data": "dateTo"},
-            {"data": "premium"}
-        ],
-        buttons: [
-            {
-                extend: 'print',
-                customize: function (win){
-                    $(win.document.body).addClass('white-bg');
-                    $(win.document.body).css('font-size', '10px');
+<script src="/js/cleave-js/cleave.min.js"></script>
 
-                    $(win.document.body).find('table')
-                            .addClass('compact')
-                            .css('font-size', 'inherit');
-                },
-                text: 'Imprimir'
-            }
-        ],
-        language: {
-            "decimal": "",
-            "emptyTable": "No hay información",
-            "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
-            "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
-            "infoFiltered": "(Filtrado de _MAX_ total entradas)",
-            "infoPostFix": "",
-            "thousands": ".",
-            "lengthMenu": "Mostrar _MENU_ Entradas",
-            "loadingRecords": "Cargando...",
-            "processing": "Procesando...",
-            "search": "Buscar:",
-            "zeroRecords": "Sin resultados encontrados",
-            "paginate": {
-                "first": "Primero",
-                "last": "Último",
-                "next": "Siguiente",
-                "previous": "Anterior"
-            }
+<!-- Page-Level Scripts -->
+
+<% if (typeof(data) !== 'undefined') { %>
+    <script>
+        function toDataURL(src, callback){
+            var image = new Image();
+            image.crossOrigin = 'Anonymous';
+            image.onload = function(){
+                var canvas = document.createElement('canvas');
+                var context = canvas.getContext('2d');
+                canvas.height = this.naturalHeight;
+                canvas.width = this.naturalWidth;
+                context.drawImage(this, 0, 0);
+                var dataURL = canvas.toDataURL('image/png');
+                callback(dataURL);
+            };
+            image.src = src;
+        }   
+        toDataURL('/img/LOGOTIPO_VPRINCIPAL_ATINA.png', function(dataURL){
+            localStorage.setItem("formDataImageAtina", dataURL) 
+        });
+    </script>
+    
+    <script>
+        var lista = <%- JSON.stringify(data) %>;
+        var tablaPrimaCobrada = null;
+        $(document).ready(function(){
+            tablaPrimaCobrada = $('#tablaPrimasCobradas').DataTable({
+                pageLength: 25,
+                responsive: true,
+                dom: '<"html5buttons"B>lTfgitp',
+                processing: true,
+                serverSide: false,
+                order: [[0, 'desc']],
+                columns: [
+                    {"data": "nombre_agente_propio"},
+                    {"data": "numero_poliza"},
+                    {"data": "nombre_aseguradora"},
+                    {"data": "tipo_individual_poliza"},
+                    {"data": "nombre_tomador_poliza"},
+                    {"data": "nombre_completo_razon_social_asegurado"},
+                    {"data": "prima_neta"}
+                ],
+                buttons: [
+                    {extend: 'excel', title: 'Primas Cobradas'},
+                    {
+                        extend: 'pdfHtml5',
+                        title: 'Primas Cobradas',
+                        customize: function ( doc ) {
+                            doc.content.splice( 1, 0, {
+                                margin: [ 0, 0, 0, 12 ],
+                                alignment: 'left',
+                                image: localStorage.formDataImageAtina,
+                                width: 80,
+                                height: 30
+                            } );
+                        }
+                    },
+                    {
+                        extend: 'print',
+                        customize: function (win){
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                    .addClass('compact')
+                                    .css('font-size', 'inherit');
+                        },
+                        text: 'Imprimir'
+                    }
+                ],
+                language: {
+                    "decimal": "",
+                    "emptyTable": "No hay información",
+                    "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+                    "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+                    "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+                    "infoPostFix": "",
+                    "thousands": ".",
+                    "lengthMenu": "Mostrar _MENU_ Entradas",
+                    "loadingRecords": "Cargando...",
+                    "processing": "Procesando...",
+                    "search": "Buscar:",
+                    "zeroRecords": "Sin resultados encontrados",
+                    "paginate": {
+                        "first": "Primero",
+                        "last": "Último",
+                        "next": "Siguiente",
+                        "previous": "Anterior"
+                    }
+                }
+            });
+            tablaPrimaCobrada.rows.add(lista);
+            tablaPrimaCobrada.draw();
+        });
+    </script>
+<% } %>
+
+<script>
+    if (($('#select_box').val() === 'V') || ($('#select_box').val() === 'E')) {
+        var cleaveNumeral = new Cleave('.input-numeral', {
+            numeral: true,
+            numeralDecimalMark: ',',
+            delimiter: '.',
+            stripLeadingZeroes: false
+        });
+    } else {
+        var cleaveNumeral = new Cleave('.input-numeral', {
+            numeral: true,
+            numeralDecimalMark: '!',
+            delimiter: '',
+            stripLeadingZeroes: false
+        });
+    }
+
+    $('#select_box').change(function(){
+        if ((this.value === 'V') || (this.value === 'E')) {
+            var cleaveNumeral = new Cleave('.input-numeral', {
+                numeral: true,
+                numeralDecimalMark: ',',
+                delimiter: '.',
+                stripLeadingZeroes: false
+            });
+            cleaveNumeral.setRawValue('');
+        } else {
+            var cleaveNumeral = new Cleave('.input-numeral', {
+                numeral: true,
+                numeralDecimalMark: '!',
+                delimiter: '',
+                stripLeadingZeroes: false,
+            });
+            cleaveNumeral.setRawValue('');
         }
     });
-    tablaPrimaCobrada.rows.add(lista);
-    tablaPrimaCobrada.draw();
-});
 </script>
 
 </body>
